--- a/www/src/styles.css
+++ b/www/src/styles.css
@@ -5,17 +5,19 @@
 @tailwind utilities;
 
 /* Here we can add our own utilities or custom CSS */
-/*.field {*/
-/*    @apply border py-2 px-3 text-grey-darkest;*/
-/*}*/
+.field {
+    @apply border py-2 px-3 text-gray-800;
+/*"bg-gray-200 shadow-inner rounded-l p-2";*/
+}
 
-/*.field-label {*/
-/*    @apply uppercase font-bold text-lg text-grey-darkest mb-2;*/
-/*}*/
+.field-label {
+    @apply font-bold leading-8 uppercase text-sm text-gray-600 mb-2 h-6;
+    /*h-6 mx-2 mt-3*/
+}
 
-/*.field-group {*/
-/*    @apply flex flex-col;*/
-/*}*/
+.field-group {
+    @apply flex flex-col;
+}
 
 .btn {
     @apply block text-white uppercase text-lg p-4 rounded;
